Apply SonarLint