@@ -12,7 +12,6 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -56,7 +55,7 @@ public class StatisticsService {
                     return true;
                 })
                 .map(Integer::valueOf)
-                .collect(Collectors.toList()))
+                .toList())
         );
     }
 
